 $Id: ChangeLog,v 1.143 2008/04/07 02:57:53 uehira Exp $

2008-04-07  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.86 released.
	* configure.in : check Tcl/Tk8.0jp path.
	* English manuals install to $mandir, and Japanese manuals install
	  to $mandir/ja.

2008-04-05  Urabe Taku <urabe@eri.u-tokyo.ac.jp>
	* src/shmdump.c: bug fix : unsigned long wsize -> long wsize

2008-02-20  Urabe Taku <urabe@eri.u-tokyo.ac.jp>
	* src/win.c: avoid overflow in getting offset levels for
	  near 32 bit data (in plot_mon() and plot_zoom()).

2007-09-29  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* check d_namlen exists as a member of struct DIR or not.

2007-09-12  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.85 released.
	* src/insert_trg.c : bug fixed.

2007-08-27  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.84 released.
	* src/wck_wdisk.c : added -r option.

2007-06-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.83 released.
	* src/hypomhc.c : bug fixed in smode

2007-01-16  Urabe Taku <urabe@eri.u-tokyo.ac.jp>
	* Version 1.1.82 released.
        * src/wdisk.c: 2007.1.15 i<1000000 -> 5000000,
                       BUFSZ 500000->1000000, BUFLIM 1000000->5000000
        * src/cormeisei.c: MAX_SEC_SIZE 1000000 -> 5000000
        * src/wadd2.c: MAXSIZE 1M->5M
        * src/wadd.c: MAXSIZE 1M->5M
        * src/raw2mon.c: MAXSIZE 1M->5M, SIZE_WBUF 300K->1M
        * src/pmon.c: 'ch_file not found' message fixed

2006-10-24  Urabe Taku <urabe@eri.u-tokyo.ac.jp>
        * src/win.c: fixed a bug in set_geometry() for resize or OPEN.

2006-09-21  Urabe Taku <urabe@eri.u-tokyo.ac.jp>
	* src/wed.c: put back mklong() and added comment.

2006-09-20  Urabe Taku <urabe@eri.u-tokyo.ac.jp>
	* src/wed.c: changed mklong() for byte-order-free.
	* src/relay.c: deleted mklong() (not used).

2006-09-02  Urabe Taku <urabe@eri.u-tokyo.ac.jp>
	* src/send_raw.c: added 'no resend' mode (-R)

2006-08-29  Shigeki Nakagawa  <nakagawa@eri.u-tokyo.ac.jp>